shadow-input-focus

--- a/Appointment_Form.html
+++ b/Appointment_Form.html
@@ -63,7 +63,7 @@ display: block;
 .form-warp button:hover {
   background-color: #0284d0;
 }
-  
+input:focus{box-shadow: 2px 2px 8px 2px black;} 
   </style>
 </head>
 <body>
