update CSS, JavaScript and html
update the directory for CSS JavaScript and Form Html and changing images directory also add back to home link on form html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/Html/Css/Car_Shop_utility_style.css" />
-    <link rel="stylesheet" href="/Html/Css/Car_Shop_main_Style.css">
-    <link rel="stylesheet" href="/Html/Css/Car_Shop_media_quiery.css">
+    <link rel="stylesheet" href="Css/Car_Shop_utility_style.css">
+    <link rel="stylesheet" href="Css/Car_Shop_main_Style.css">
+    <link rel="stylesheet" href="Css/Car_Shop_media_quiery.css">
      <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
@@ -27,7 +27,7 @@
             <li><a href="#home" id="navbar">Home</a></li>
             <li><a href="#Services">Services</a></li>
             <li><a href="#qualified">Auto Parts</a></li>
-            <li><a href="/Html/Appointment_Form.html">Appointments</a></li>
+            <li><a href="Appointment_Form.html">Appointments</a></li>
         </ul>
       </nav>
     </div>
@@ -106,7 +106,7 @@
         </div>
         <div class="service-image">
           <img id="myImage" class="image-js"
-            src="/Html/Image/png/fercha.png"
+            src="Image/png/fercha.png"
             alt="Car Srvices"
           />
           </div>
@@ -158,25 +158,25 @@
 
       <div class="qualified-grid">
         <div class="service-1">
-        <img src="/Html/Image/png/tier.png" alt="">
+        <img src="Image/png/tier.png" alt="">
         <h3>Tire and Wheel</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
       </div>
 
         <div class="service-2">
-        <img src="/Html/Image/png/electrical.png" alt="">
+        <img src="Image/png/electrical.png" alt="">
         <h3>System service</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
       </div>
 
         <div class="service-3">
-        <img src="/Html/Image/png/inside car gear.png" alt="">
+        <img src="Image/png/inside car gear.png" alt="">
         <h3>Electrical system</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
       </div>
 
         <div class="service-4">
-        <img src="/Html/Image/png/inside car.png" alt="">
+        <img src="Image/png/inside car.png" alt="">
         <h3>Engine diagnostics</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
@@ -196,7 +196,7 @@
     <p>Copyright &copy;2023 - Car Services</p>
   </footer>
 
-    <script src="/Html/JavaScript/Car_Shop_js.js"></script>
+    <script src="./JavaScript/Car_Shop_js.js"></script>
 
   </body>
 </html>
