--- a/Appointment_Form.html
+++ b/Appointment_Form.html
@@ -58,12 +58,26 @@ display: block;
   margin-top: 20px;
   border-radius: 5px;
   cursor: pointer;
+  border: none;
+  font-size: 16px;
 }
 
 .form-warp button:hover {
   background-color: #0284d0;
+  border: #1b1b32 solid 1px;
+  color: whitesmoke;
 }
-  
+    a {
+        display: inline-block;
+        text-decoration: none;
+        color: #1b1b32;
+        padding: 5px;
+        margin-top: 10px;
+        border-radius: 5px;
+      }
+      a:hover {
+        background-color: #28a745;
+      }
   </style>
 </head>
 <body>
@@ -120,6 +134,7 @@ display: block;
       
       </div>
       <button type="submit">Send Appointment Form</button>
+      <a href="index.html">Back To Home</a>
   </form>
   </div>
   </div>
