Add responsive navigation bar f
- change main CSS little bit
- change index html little bit
- add more media quiery
- add more JavaScript

--- a/index.html
+++ b/index.html
@@ -22,13 +22,17 @@
       <h1 class="logo">
         <span class="text-primary"><i class="fas fa-car"></i>Car</span> Service
       </h1>
-      <nav>
-        <ul>
-            <li><a href="#home" id="navbar">Home</a></li>
+       <a href="javascript:void(0);" id="mobilenav" class="icon" aria-hidden="false">
+            <i class="fa fa-bars" aria-hidden="true" id="hamburger" ></i>
+            </a>
+      <nav class="menu">
+        <ul class="mobilenava" >
+            <li ><a href="#home" id="navbar" >Home</a></li>
             <li><a href="#Services">Services</a></li>
             <li><a href="#qualified">Auto Parts</a></li>
             <li><a href="Appointment_Form.html">Appointments</a></li>
-        </ul>
+            
+        </ul> 
       </nav>
     </div>
 
